ToolChains/Carl/ElCar/Carc/parser/parser.cpp
//==========================================================================
// Copyright (c) 2000-2009,  Elastos, Inc.  All Rights Reserved.
//==========================================================================

#include <ctype.h>
#include <stdlib.h>
#include <assert.h>
#include <sys/io.h>
#include "carc.h"
#include "clsutil.h"

#define _stricmp strcasecmp
#define _MAX_PATH 256

enum InternalReturnValue {
    Ret_Continue        = 0,
    Ret_ContinueOnError = -1,
    Ret_AbortOnError    = -2,
};

enum Properties {
    Prop_deprecated     = 0x0001,
    Prop_local          = 0x0002,
    Prop_private        = 0x0004,
};

static FILE *s_pFile;
static CLSModule *s_pModule = NULL;
static const char *s_pszSourcePath = "";
static const char *s_pszFactoryUrl = "";
static char *s_pszCurrentPath = "";
static char *s_pszCarFullName = "";
ClassAttrib s_DefaultThreadModel = ClassAttrib_freethreaded;
bool s_bLenientNaming = false;
bool s_bInKernel = false;

static const IID EIID_IInterface = \
{0x00000000,0x0000,0x0000,{0xC0,0x00,0x00,0x00,0x00,0x00,0x00,0x66}};

static const IID EIID_IObject = \
{0x00000000,0x0000,0x0000,{0xC0,0x00,0x00,0x00,0x00,0x00,0x00,0x68}};

static const IID EIID_IAspect = \
{0x00010002,0x0000,0x0000,{0xC0,0x00,0x00,0x00,0x00,0x00,0x00,0x66}};

static const IID EIID_IClassObject = \
{0x00000001,0x0000,0x0000,{0xC0,0x00,0x00,0x00,0x00,0x00,0x00,0x46}};

static const CLSID CLSID_XOR_CallbackSink = \
/* e724df56-e16a-4599-8edd-a97ab245d583 */
{0xe724df56,0xe16a,0x4599,{0x8e,0xdd,0xa9,0x7a,0xb2,0x45,0xd5,0x83}};

void SetFactoryUrl(const char *pszUrl)
{
    s_pszFactoryUrl = pszUrl;
}

void SetSourcePath(const char *pszPath)
{
    s_pszSourcePath = pszPath;
}

void SetDefaultThreadModel(ClassAttrib attrib)
{
    s_DefaultThreadModel = attrib;
}

int GetCurrentCarPath(const char *pszPath, char **ppszDest)
{
    int n = strlen(pszPath) - 1;

    while (n >= 0) {
        if (IS_PATH_SEPARATOR(*(pszPath + n))) {
            if ((*ppszDest) && ('\0' != **ppszDest))
                delete[] *ppszDest;

            *ppszDest = new char[n + 1];
            if (NULL == *ppszDest) {
                ErrorReport(CAR_E_OutOfMemory);
                return Ret_AbortOnError;
            }

            memcpy(*ppszDest, pszPath, n);
            (*ppszDest)[n] = 0;

            break;
        }
        n--;
    }

    return Ret_Continue;
}

const char *GenerateInternalName(const char *s)
{
    static char s_szName[32];
    static int s_nSerial = 1;

    sprintf(s_szName, "__Internal_%s%d", s, s_nSerial++);
    return s_szName;
}

int Hexstr2Int(const char *pszHex)
{
    int nResult = 0;

    assert(pszHex[0] == '0' && (pszHex[1] == 'x' || pszHex[1] == 'X'));

    pszHex += 2; // skip prefix "0x"
    while (*pszHex) {
        nResult *= 16;

        if (isdigit(*pszHex)) {
            nResult += *pszHex - '0';
        }
        else if (*pszHex >= 'a' && *pszHex <= 'f') {
            nResult += *pszHex - 'a' + 10;
        }
        else {
            nResult += *pszHex - 'A' + 10;
        }
        pszHex++;
    }
    return nResult;
}

#define IS_ECODE(t)    ((t).type == Type_ECODE && (t).nPointer == 0)

BOOL IsValidParamTypeAttrib(
    const CLSModule *pModule, const TypeDescriptor *pType,
    const DWORD dwAttribs, const BOOL isLocal, const BOOL isDeprecated)
{
    TypeDescriptor type;

    switch (pType->type) {
        case Type_alias:
            GetOriginalType(pModule, pType, &type);
            return IsValidParamTypeAttrib(pModule, &type, dwAttribs, isLocal, isDeprecated);

        /*
         * local: [in] PVoid ;
         * local: [out] PVoid;
         * local: [out] PVoid *;
         */
        case Type_PVoid:
            if (isLocal) {
                if (dwAttribs & ParamAttrib_in) {
                    if (0 == pType->nPointer) return TRUE;
                    ErrorReport(CAR_E_IllegalTypeUsage, "Type cann't have '*' when it modifies [in] parameter.");
                    return FALSE;
                }
                if (dwAttribs & ParamAttrib_out) {
                    if (dwAttribs & ParamAttrib_callee) {
                        ErrorReport(CAR_E_IllegalTypeUsage, "Attribute [callee] is illegal.");
                        return FALSE;
                    }

                    if (1 >= pType->nPointer) return TRUE;

                    ErrorReport(CAR_E_IllegalTypeUsage, "Type cann't have more than "
                            "one '*' when it modifies [out] parameter.");
                    return FALSE;
                }
            }
            ErrorReport(CAR_E_IllegalTypeUsage, "Type is a local type.");
            return FALSE;

        /*
         * local|unlocal: [in] IInterface *;
         * local|unlocal, deprecated: [in] IInterface **; // warning
         * local|unlocal: [out] IInterface **;
         */
        case Type_interface:
            if ((pModule->ppInterfaceDir[pType->sIndex]->pDesc->dwAttribs
                    & InterfaceAttrib_local) && (!isLocal)) {
                ErrorReport(CAR_E_IllegalTypeUsage, "Type is a local type.");
                return FALSE;
            }

            if (dwAttribs & ParamAttrib_in) {
                if (1 == pType->nPointer) return TRUE;
                if (2 == pType->nPointer) {
                    if (isDeprecated) {
                        ErrorReport(CAR_W_DecrepitTypeUsage, "The usage is deprecated, and will be removed.");
                        return TRUE;
                    }
                    ErrorReport(CAR_E_IllegalTypeUsage, "The usage is deprecated, you should use keyword \"deprecated\".");
                    return FALSE;
                }
                ErrorReport(CAR_E_IllegalTypeUsage, "Type cann't have more than two '*' "
                        "when it modifies [in] parameter.");
                return FALSE;
            }

            if (dwAttribs & ParamAttrib_out) {
                if ((2 == pType->nPointer)
                        && !(dwAttribs & ParamAttrib_callee)) return TRUE;
                ErrorReport(CAR_E_IllegalTypeUsage, "Type should have only two '*' "
                        "when it modifies [out] parameter.");
                return FALSE;
            }

            return FALSE;

        /*
         * local|unlocal: [in|out] ArrayOf<Type>;
         * local|unlocal: [in|out] ArrayOf<Type, size>;
         * local|: [out, callee] ArrayOf<Type> *;
         * local|unlocal, deprecated: [in] ArrayOf<Type> *;   //warning
         * local|unlocal, deprecated: [in] ArrayOf<Type, size> *; //warning
         */
        case Type_ArrayOf:
        case Type_BufferOf:
            if (IsLocalCarQuintet(pModule, pType->pNestedType, dwAttribs) && (!isLocal)) {
                ErrorReport(CAR_E_IllegalTypeUsage, "Type is a local type.");
                return FALSE;
            }
            //no break or return here

        case Type_MemoryBuf:
            if (dwAttribs & ParamAttrib_in) {
                if (0 == pType->nPointer) return TRUE;
                if (1 == pType->nPointer) {
                    if (isDeprecated) {
                        ErrorReport(CAR_W_DecrepitTypeUsage, "The usage is deprecated, and will be removed.");
                        return TRUE;
                    }
                    ErrorReport(CAR_E_IllegalTypeUsage, "The usage is deprecated, you should use keyword \"deprecated\".");
                    return FALSE;
                }
                ErrorReport(CAR_E_IllegalTypeUsage, "Type cann't have more than one '*'.");
                return FALSE;
            }
            if (dwAttribs & ParamAttrib_out) {
                if (0 == pType->nPointer) {
                    if (!(dwAttribs & ParamAttrib_callee)) return TRUE;
                    ErrorReport(CAR_E_IllegalTypeUsage, "Attribute [callee] is illegal.");
                    return FALSE;
                }
                if (1 == pType->nPointer) {
                    if (dwAttribs & ParamAttrib_callee) return TRUE;
                    ErrorReport(CAR_E_IllegalTypeUsage, "Attribute should be [callee].");
                    return FALSE;
                }
                ErrorReport(CAR_E_IllegalTypeUsage, "Type cann't have more than one '*'.");
                return FALSE;
            }
            return FALSE;

        /*
         * local|unlocal: [out] StringBuf<>;
         * local|unlocal: [out] StringBuf<5>;
         * local|: [out, callee] StringBuf<>*;
         */
        case Type_StringBuf:
            if (dwAttribs & ParamAttrib_out) {
                if (0 == pType->nPointer) {
                    if (!(dwAttribs & ParamAttrib_callee)) return TRUE;
                    ErrorReport(CAR_E_IllegalTypeUsage, "Attribute [callee] is illegal.");
                    return FALSE;
                }
                if (1 == pType->nPointer) {
                    if (dwAttribs & ParamAttrib_callee) return TRUE;
                    ErrorReport(CAR_E_IllegalTypeUsage, "Attribute should be [callee].");
                    return FALSE;
                }
            }
            ErrorReport(CAR_E_IllegalTypeUsage, "Type can only modify [out] parameter.");
            return FALSE;

        /*
         * local: [in] UInt16;
         * local, deprecated: [in] UInt16 *;   //warning
         * local: [out] UInt16 *;
         * local, deprecated: [out] UInt16 **;   //warning
         */
        case Type_Int8:
        case Type_UInt16:
        case Type_UInt32:
        case Type_UInt64:
            if (isLocal) {
                if (dwAttribs & ParamAttrib_in) {
                    if (0 == pType->nPointer) return TRUE;
                    if (1 == pType->nPointer) {
                        if (isDeprecated) {
                            ErrorReport(CAR_W_DecrepitTypeUsage, "The usage is deprecated, and will be removed.");
                            return TRUE;
                        }
                        ErrorReport(CAR_E_IllegalTypeUsage, "The usage is deprecated, you should use keyword \"deprecated\".");
                        return FALSE;
                    }
                    ErrorReport(CAR_E_IllegalTypeUsage, "Type cann't have more than one '*'.");
                    return FALSE;
                }
                if (dwAttribs & ParamAttrib_out) {
                    if (dwAttribs & ParamAttrib_callee) {
                        ErrorReport(CAR_E_IllegalTypeUsage, "Attribute [callee] is illegal.");
                        return FALSE;
                    }

                    if (1 == pType->nPointer) return TRUE;

                    if (2 == pType->nPointer) {
                        if (isDeprecated) {
                            ErrorReport(CAR_W_DecrepitTypeUsage, "The usage is deprecated, and will be removed.");
                            return TRUE;
                        }
                        ErrorReport(CAR_E_IllegalTypeUsage, "The usage is deprecated, you should use keyword \"deprecated\".");
                        return FALSE;
                    }
                    ErrorReport(CAR_E_IllegalTypeUsage, "Type cann't have more than two '*'.");
                    return FALSE;
                }
            }
            ErrorReport(CAR_E_IllegalTypeUsage, "Type is a local type.");
            return FALSE;

        /*
         * local|unlocal: [in] struct stname;
         * local|unlocal, deprecated: [in] struct stname *;  //warning
         * local|unlocal: [out] struct stname *;
         * local:         [out] struct stname **;
         */
        case Type_struct:
            //check if struct is local based on its elements;
            if (IsLocalStruct(pModule, pModule->ppStructDir[pType->sIndex]->pDesc)
                    && (!isLocal)) {
                ErrorReport(CAR_E_IllegalTypeUsage, "Type is a local type.");
                return FALSE;
            }

            if (dwAttribs & ParamAttrib_in) {
                if (0 == pType->nPointer) return TRUE;
                if (1 == pType->nPointer) {
                    if (isDeprecated) {
                        ErrorReport(CAR_W_DecrepitTypeUsage, "The usage is deprecated, and will be removed.");
                        return TRUE;
                    }
                    ErrorReport(CAR_E_IllegalTypeUsage, "The usage is deprecated, you should use keyword \"deprecated\".");
                    return FALSE;
                }
                ErrorReport(CAR_E_IllegalTypeUsage, "Type cann't have more than one '*'.");
                return FALSE;
            }
            if (dwAttribs & ParamAttrib_out) {
                if (dwAttribs & ParamAttrib_callee) {
                    ErrorReport(CAR_E_IllegalTypeUsage, "Attribute [callee] is illegal.");
                    return FALSE;
                }

                if (1 == pType->nPointer) return TRUE;

                if (2 == pType->nPointer) {
                    if (isLocal) return TRUE;
                    else {
                        ErrorReport(CAR_E_IllegalTypeUsage, "Type is a local type.");
                        return FALSE;
                    }
                }
                ErrorReport(CAR_E_IllegalTypeUsage, "Type cann't have more than two '*'.");
                return FALSE;
            }
            return FALSE;

        /*
         * local|unlocal: [in] type;
         * local|unlocal, deprecated: [in] type *;   //warning
         * local|unlocal: [out] type *;
         * local, deprecated: [out] type **;   //warning
         */
        default:
            if (dwAttribs & ParamAttrib_in) {
                if (0 == pType->nPointer) return TRUE;
                if (1 == pType->nPointer) {
                    if (isDeprecated) {
                        ErrorReport(CAR_W_DecrepitTypeUsage, "The usage is deprecated, and will be removed.");
                        return TRUE;
                    }
                    ErrorReport(CAR_E_IllegalTypeUsage, "The usage is deprecated, you should use keyword \"deprecated\".");
                    return FALSE;
                }
                ErrorReport(CAR_E_IllegalTypeUsage, "Type cann't have more than one '*'.");
                return FALSE;
            }
            if (dwAttribs & ParamAttrib_out) {
                if (dwAttribs & ParamAttrib_callee) {
                    ErrorReport(CAR_E_IllegalTypeUsage, "Attribute [callee] is illegal.");
                    return FALSE;
                }

                if (0 == pType->nPointer) {
                    ErrorReport(CAR_E_IllegalTypeUsage, "Type should have one or two '*'.");
                    return FALSE;
                }

                if (1 == pType->nPointer) return TRUE;

                if (2 == pType->nPointer) {
                    if (!isLocal) {
                        ErrorReport(CAR_E_IllegalTypeUsage, "Type is a local type.");
                        return FALSE;
                    }
                    if (isDeprecated) {
                        ErrorReport(CAR_W_DecrepitTypeUsage, "The usage is deprecated, and will be removed.");
                        return TRUE;
                    }
                    ErrorReport(CAR_E_IllegalTypeUsage, "The usage is deprecated, you should use keyword \"deprecated\".");
                    return FALSE;
                }
                ErrorReport(CAR_E_IllegalTypeUsage, "Type cann't have more than two '*'.");
                return FALSE;
            }
            return FALSE;
    }
}

int P_BaseType(CARToken token, TypeDescriptor *pType);

// TYPE        -> < BASE_TYPE | DEF_TYPE > [ s_star [ s_star ] ]
// DEF_TYPE    -> [ k_struct | k_enum ] ident
//
int P_Type(TypeDescriptor *pType)
{
    int n;
    CARToken token;

    token = GetToken(s_pFile);
    switch (token) {
        case Token_ident:
            if (RetrieveIdentifyType(
                g_szCurrentToken, s_pModule, pType, FALSE) < 0) {
                ErrorReport(CAR_E_UndefType, g_szCurrentToken);
                // continue on error
            }
            break;

        case Token_K_enum:
            if (GetToken(s_pFile) != Token_ident) {
                ErrorReport(CAR_E_ExpectEnumName);
                return Ret_AbortOnError;
            }
            n = RetrieveEnum(g_szCurrentToken, s_pModule, FALSE);
            if (n < 0) {
                ErrorReport(CAR_E_NotFound, "enum", g_szCurrentToken);
                break; // continue on error
            }
            pType->type = Type_enum;
            pType->sIndex = n;
            break;

        case Token_K_struct:
            if (GetToken(s_pFile) != Token_ident) {
                ErrorReport(CAR_E_ExpectStructName);
                return Ret_AbortOnError;
            }
            n = RetrieveStruct(g_szCurrentToken, s_pModule, FALSE);
            if (n < 0) {
                ErrorReport(CAR_E_NotFound, "struct", g_szCurrentToken);
                break; // continue on error
            }
            pType->type = Type_struct;
            pType->sIndex = n;
            break;

        default:
            if (P_BaseType(token, pType) == Ret_AbortOnError)
                return Ret_AbortOnError;
            break;
    }

    if (PeekToken(s_pFile) == Token_S_star) {
        GetToken(s_pFile);
        pType->nPointer++;
        if (PeekToken(s_pFile) == Token_S_star) {
            GetToken(s_pFile);
            pType->nPointer++;
        }
    }
    return Ret_Continue;
}

// ArrayOf      -> k_ArrayOf s_langle TYPE, SIZE s_rangle
// BufferOf     -> k_BufferOf s_langle TYPE, SIZE s_rangle
// MemoryBuf    -> k_MemoryBuf s_langle SIZE s_rangle
// StringBuf   -> k_StringBuf s_langle SIZE s_rangle
//
int P_CarQuient(TypeDescriptor *pType)
{
    int s, token;

    pType->nSize = -1;
    if (GetToken(s_pFile) != Token_S_langle) {
        ErrorReport(CAR_E_ExpectSymbol, "<");
        return Ret_AbortOnError;
    }

    if ((Type_ArrayOf == pType->type)
            || (Type_BufferOf == pType->type)
            || (Type_MemoryBuf == pType->type)){

        pType->pNestedType = new TypeDescriptor;
        if (!pType->pNestedType) {
            ErrorReport(CAR_E_OutOfMemory);
            return Ret_AbortOnError;
        }
        memset(pType->pNestedType, 0, sizeof(TypeDescriptor));

        if (Type_MemoryBuf == pType->type) {
            pType->pNestedType->type = Type_Byte;
        }
        else {
            if (P_Type(pType->pNestedType) == Ret_AbortOnError) {
                goto ErrorExit;
            }

            if ((Type_ArrayOf == pType->pNestedType->type)
                    || (Type_BufferOf == pType->pNestedType->type)
                    || (Type_MemoryBuf == pType->pNestedType->type)
                    || (Type_StringBuf == pType->pNestedType->type)) {
                ErrorReport(CAR_E_NestedCARQuient);
                return Ret_AbortOnError;
            }

            if (Token_S_comma == PeekToken(s_pFile)) {
                GetToken(s_pFile);
                token = PeekToken(s_pFile);
                if (!(Token_integer == token) && !(Token_ident == token)){
                    ErrorReport(CAR_E_IlleagalSizeType);    //< n > n must be an integer
                    return Ret_AbortOnError;
                }
            }
        }
    }

    token = GetToken(s_pFile);
    if (token == Token_integer) {
        pType->nSize = atoi(g_szCurrentToken);

        token = GetToken(s_pFile);
    }
    else if (token == Token_ident) {
        s = RetrieveConst(g_szCurrentToken, s_pModule, FALSE);
        if (s < 0) {
            ErrorReport(CAR_E_NotFound, "const", g_szCurrentToken);
            return Ret_AbortOnError;
        }
        if (s_pModule->ppConstDir[s]->type != INTEGER) {
            ErrorReport(CAR_E_NotIntegerConst, g_szCurrentToken);
            return Ret_AbortOnError;
        }
        pType->nSize = s_pModule->ppConstDir[s]->v.intValue.nValue;

        token = GetToken(s_pFile);
    }

    if (token != Token_S_rangle) {
        ErrorReport(CAR_E_ExpectSymbol, ">");
        return Ret_AbortOnError;
    }

    return Ret_Continue;

ErrorExit:
    delete pType->pNestedType;
    pType->pNestedType = NULL;

    return Ret_AbortOnError;
}

// BASE_TYPE   -> C_TYPE | CAR_TYPE
//
int P_BaseType(CARToken token, TypeDescriptor *pType)
{

    switch (token) {
        case Token_K_ECode:
            pType->type = Type_ECode;
            break;
        case Token_K_Byte:
            pType->type = Type_Byte;
            break;
        case Token_K_Boolean:
            pType->type = Type_Boolean;
            break;
        case Token_K_Int8:
            pType->type = Type_Int8;
            break;
        case Token_K_Int16:
            pType->type = Type_Int16;
            break;
        case Token_K_UInt16:
            pType->type = Type_UInt16;
            break;
        case Token_K_Int32:
